discussion/kv_engine/140915/140915_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-40267: ActiveStreamCheckpointProcessorTask should be a NonIO task

The ActiveStreamCheckpointProcessorTask is incorrectly assigned to the
AuxIO thread pool (which is intended for IO-bound tasks not directly
related to reading / flushing data).

This bug traces back to when ActiveStreamCheckpointProcessorTask was
created on the 3.x branch - from the review comments of the original
patch
(http://review.couchbase.org/c/ep-engine/+/57148/5/src/dcp-producer.cc#152):

    Jim Walker
    2015-11-24
    The initial reason is to try and distribute the load. NONIO is
    already running the DcpConsumer Processor(s), itempager,
    expirypager, checkpoint remover, hashtable resizer and many more
    (http://src.couchbase.org/source/search?q=&defs=&refs=NONIO_TASK_IDX&path=&hist=&type=&project=3.1.1)
    whereas AUXIO is running DcpBackfill and access scanner (other
    tasks appear to be TAP related). As stated in the comments, for
    future (master branch) this should be revisited, maybe creating a
    DCP task type or increasing NONIO threads?

There is arguably two problems with it running AuxIO:

1. AuxIO tasks can often have long runtimes (latencies) as they are
   performing synchronous disk IO - and hence could impact the
   scheduling latency of the ActiveStreamCheckpointProcessorTask which
   should ideally have low latency (given it directly affects overall
   replication latency).

2. The AuxIO thread pool is small (compared to the NonIO thread pool)
   - thread counts for a few different machine sizes:

    #CPUs  #AuxIO thread  #NonIO threads
    8	   1	          2
    16     2	          4
    32	   4	          8

As such, DCP streaming (for example for in-memory phase of rebalance)
can be limited in how much CPU it can use and be prematurely
CPU-bound.

Change-Id: I9e4549428dc3bd08dd33abe05da8dac521de9ef2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-11-25 12:32:00.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-25 13:42:44.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5879/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5879/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5879/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15250/ : FAILURE

Failure of a CTest test [2020-11-25T13:41:53.742Z] 313/394 Test  #82: ep-engine_ep_unit_tests.ExecutorPoolEpEngineTest/FollyExecutorPool ..........................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15250/ )

Undefined Sanitizer: kv_engine/engines/ep/src/executorpool.cc:43:53: runtime error: member call on null pointer of type "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15250/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4413/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32078/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27674/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6396/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7319/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7432/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7695/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-26 11:23:02.000000000
Message: 
Patch Set 2:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5879/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5879/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5879/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4413/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32078/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27674/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6396/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7319/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7432/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7695/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15271/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-11-26 11:35:32.000000000
Message: 
Patch Set 2: Verified+1

Overriding CV-1 from clang-tidy - it doesn't like tasks.def.h.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-11-26 11:35:34.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2020-11-26 11:56:10.000000000
Message: 
Patch Set 2: Code-Review-1

(2 comments)

-1 only for the comment, priority change might warrant a future experiment
Line:73, engines/ep/src/tasks.def.h -> Perhaps this should be the the same priority as DcpConsumerTask?

Line:49, engines/ep/src/vbucket_notify_context.h -> NonIO

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-11-26 11:59:23.000000000
Message: 
Patch Set 2:

(2 comments)
Line:73, engines/ep/src/tasks.def.h -> Possibly - hard to say without further experimentation. To be honest all the priorities probably need re-evaluating with FollyExecutorPool, given we have very different scheduling behaviour...

Line:49, engines/ep/src/vbucket_notify_context.h -> Ack

----------------------------------------------------------------------------------------------------------------------
